--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}Flasky{% endblock %}
+{% block title %}Hello{% endblock %}
 
 {% block navbar %}
 <div class="navbar navbar-invrese" role="navigation">
@@ -12,7 +12,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Flasky</a>
+            <a class="navbar-brand" href="/">This is SXF at LosAngeles</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -26,7 +26,10 @@
 {% block content %}
 <div class="container">
     <div class="page-header">
+    <!--
         <h1>Hello, {{ name }}!</h1>
+    -->
+    <h2>Hello, Now is : {{ time }}!</h2>
     </div>
 </div>
 {% endblock %}
