--- a/templates/base.html
+++ b/templates/base.html
@@ -14,11 +14,13 @@
             </button>
             <a class="navbar-brand" href="/">This is SXF at LosAngeles</a>
         </div>
+        <!--
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
             </ul>
         </div>
+        -->
     </div>
 </div>
 {% endblock %}
@@ -29,7 +31,7 @@
     <!--
         <h1>Hello, {{ name }}!</h1>
     -->
-    <h2>Hello, Now is : {{ time }}!</h2>
+    <h2>Hello, Server current time : {{ time }} </h2>
     </div>
 </div>
 {% endblock %}
